Working version! Rename extension

--- a/src/options.html
+++ b/src/options.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Better CSS Inject Options</title>
+    <title>Super CSS Inject Options</title>
     <link rel="stylesheet" href="options.css">
 </head>
 <body>
     <main>
         <header>
-            <h1>Better CSS Inject</h1>
+            <h2>Super CSS Inject Options</h2>
         </header>
         
         <div class="stylesheets">
