Update options page UI

--- a/src/options.html
+++ b/src/options.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="options.css">
 </head>
 <body>
-    <main>
-        <header>
-            <h2>Super CSS Inject Options</h2>
-        </header>
-        
+    <header>
+        <div class="column">
+            <img class="logo" src="icons/48x48.png" width="36" alt="">
+            <h3 class="title">Super CSS Inject Options</h3>
+        </div>
+    </header>
+    
+    <main class="column">
         <div class="stylesheets">
             <form action="#" class="stylesheets__form">
                 <input type="text" name="stylesheet-url" placeholder="Insert stylesheet URL here..">
