Clean options html

--- a/src/options.html
+++ b/src/options.html
@@ -25,29 +25,7 @@
         <div class="stylesheets__message">No stylesheets added yet.</div>
         
         <div class="stylesheets__list">
-            <div class="stylesheet">
-                <div class="stylesheet__url">http://localhost:8000/web/FID_B2B_PC/FID_B2B_PC_Theme.css</div>
-                <div class="stylesheet__actions">
-                    <button class="stylesheet__toggle"></button>
-                    <button class="stylesheet__delete"></button>
-                </div>
-            </div>
-
-            <div class="stylesheet stylesheet--active">
-                <div class="stylesheet__url">http://localhost:8000/web/FID_B2B_PC/FID_B2B_PC_Theme.css</div>
-                <div class="stylesheet__actions">
-                    <button class="stylesheet__toggle"></button>
-                    <button class="stylesheet__delete"></button>
-                </div>
-            </div>
-
-            <div class="stylesheet">
-                <div class="stylesheet__url">http://localhost:8000/web/FID_B2B_PC/FID_B2B_PC_Theme.css</div>
-                <div class="stylesheet__actions">
-                    <button class="stylesheet__toggle"></button>
-                    <button class="stylesheet__delete"></button>
-                </div>
-            </div>
+            <!-- stylesheets go here -->
         </div>
     </main>
 
